--- a/static/mainOneStyle.css
+++ b/static/mainOneStyle.css
@@ -76,3 +76,16 @@ body {
     border-bottom: 1px solid black;
     background: #666666;
 }
+
+#pageContent {
+    position: fixed;
+    left: 350px;
+    top: 50px;
+    width: 1100px;
+    height: 800px;
+    background: white;
+    border: 1px solid black;
+    padding: 0px;
+    overflow-x: auto;
+    overflow-y: auto;
+}
